@@ -3,6 +3,7 @@
 * Some tweaks to the Layouts.
 * Fix a nil error if BenikUI is not loaded.
 * Add hearthstone position to the LocPanel menu.
+* Skin a progressBar in ObjectiveTracker skin.
 
 ** v2.09, 08.08.2016**
 * Change the default position of the Changelog.
