@@ -23,6 +23,7 @@ local ChangeLogData = [=[|cffff7d0av2.10|r, xx.08.2016
  |cffff7d0a•|r Some tweaks to the Layouts.
  |cffff7d0a•|r Fix a nil error if BenikUI is not loaded.
  |cffff7d0a•|r Add hearthstone position to the LocPanel menu.
+ |cffff7d0a•|r Skin a progressBar in ObjectiveTracker skin.
  
 |cffff7d0aNotes:|r
  |cffff7d0a•|r The Heal Layout is not finished yet. Will work on it in the future.
